--- a/gitops/apps/home-assistant/configuration/dashboards/subway.yaml
+++ b/gitops/apps/home-assistant/configuration/dashboards/subway.yaml
@@ -274,6 +274,8 @@ views:
             ]
         sort:
           method: name
+  - title: Dynamic
+    icon: mdi:map-marker-radius
     cards:
       - type: conditional
         conditions:
