--- a/gitops/apps/home-assistant/configuration/automations/pet_water_fountain_alert.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/pet_water_fountain_alert.yaml
@@ -3,6 +3,7 @@ mode: single
 triggers:
   - trigger: state
     entity_id: binary_sensor.eversweet_solo_2_water_level
+    from: "on"
     to: "off"
     for:
       minutes: 5
